# AI-Scientist

./: README.md  main.py  my_experiment_result.json  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  config.py  gui_api.py  gui_cli.py  main.py
prompt-ans/: 20260604_110941.md  20260604_111618.md  20260604_111916.md  20260604_112604.md  20260604_112832.md  20260604_113400.md  20260604_115713.md  20260604_134347.md  20260604_163550.md  20260604_165711.md  20260604_170957.md  20260604_171509.md  20260604_172203.md  20260604_202454.md  20260604_203127.md  20260604_205844.md  20260604_212248.md  20260604_220503.md  20260604_223023.md  20260605_144903.md  20260606_102630.md  20260606_103755.md  20260606_105218.md  20260606_110515.md  20260606_111027.md  20260606_153240.md  20260606_163024.md  20260606_164419.md  20260606_165717.md
prompts/: 20260604_110941.txt  20260604_111618.txt  20260604_111916.txt  20260604_112604.txt  20260604_112832.txt  20260604_113400.txt  20260604_115713.txt  20260604_134347.txt  20260604_163550.txt  20260604_165711.txt  20260604_170957.txt  20260604_171509.txt  20260604_172203.txt  20260604_202454.txt  20260604_203127.txt  20260604_205844.txt  20260604_212248.txt  20260604_220503.txt  20260604_223023.txt  20260605_144903.txt  20260606_102630.txt  20260606_103755.txt  20260606_105218.txt  20260606_110515.txt  20260606_111027.txt  20260606_153240.txt  20260606_163024.txt  20260606_164419.txt  (+1 more)
ui/: index.html  (+3 more)
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
(+135 files in other folders)
