[package]
name = "ai-scientist-ui"
version = "0.1.0"
description = "Tauri desktop UI for AI Scientist"
authors = ["Codex"]
edition = "2021"

[lib]
name = "ai_scientist_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
uuid = { version = "1.11", features = ["v4"] }
